# python-embedded-example-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/app/: example.py
